manifests/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: imager-client
  name: imager-client
spec:
  replicas: 3
  selector:
    matchLabels:
      app: imager-client
  template:
    metadata:
      labels:
        app: imager-client
    spec:
      containers:
      - name: imager-client
        image: imager-client:latest
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 60
