manifests/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: imager-client
  labels:
    app: imager-client
spec:
  type: NodePort
  selector:
    app: imager-client
  ports:
  - port: 80
    targetPort: 80
